--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const services = await getCollection("services");
 <header>
     <div class="ctnr">
         <a href="/index.html" class="logo_anchor">
-            <img src="tcn-logo-default.svg" alt="The Clean Network logo" />
+            <img src="/tcn-logo-default.svg" alt="The Clean Network logo" />
         </a>
 
         <nav>
@@ -24,7 +24,7 @@ const services = await getCollection("services");
 
                 <div class="subnav">
                     <div class="flex">
-                        <a href="">Services</a>
+                        <a href="/services/">Services</a>
 
                         <button
                             class="expand icon"
@@ -67,12 +67,6 @@ const services = await getCollection("services");
 
                             <hr />
 
-                            <!-- <a href="#">Windows</a>
-                            <a href="#">Gutters & Roofs</a>
-                            <a href="#">Drains</a>
-                            <a href="#">Pressure Cleaning</a>
-                            <a href="#">Bins & Refuse Areas</a> -->
-
                             {
                                 services.map((services) => (
                                     <>
@@ -105,9 +99,9 @@ const services = await getCollection("services");
 
                     <div class="subsets">
                         <div>
-                            <a href="#" class="heading sectors icon">Sectors</a>
+                            <!-- <a href="#" class="heading sectors icon">Sectors</a>
 
-                            <hr />
+                            <hr /> -->
 
                             <a href="#">Corporate Office Buildings</a>
                             <a href="#">Small Offices</a>
@@ -173,7 +167,7 @@ const services = await getCollection("services");
         position: absolute;
         left: 0;
         height: 100%;
-        padding: 0 clamp(0rem, calc(8vw - 7rem), 4rem);
+        padding: 0 clamp(2rem, calc(8vw - 7rem), 4rem);
         display: none;
         background-color: var(--highlight);
         align-items: center;
@@ -200,7 +194,9 @@ const services = await getCollection("services");
         right: 0;
         height: clamp(1rem, 16vmin, 7.5rem);
         z-index: 4;
-        /* box-shadow: 0 1rem 3rem -1rem var(--light-b); */
+        background-image: linear-gradient(0deg, var(--primary-b) 0%, transparent 38% );
+        border-bottom: 0.2rem solid var(--primary);
+        /* padding-top: 0.2rem; */
     }
 
     header > .ctnr {
@@ -242,11 +238,11 @@ const services = await getCollection("services");
     }
 
     .hambt.close span:nth-child(1) {
-        transform: translateY(0.85rem) rotate(45deg);
+        transform: translateY(1.1rem) rotate(45deg);
     }
 
     .hambt.close span:nth-child(2) {
-        transform: translateY(-0.25rem) rotate(-45deg);
+        transform: rotate(-45deg);
     }
 
     .hambt.close span:nth-child(3) {
@@ -255,35 +251,37 @@ const services = await getCollection("services");
     }
 
     header nav {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        transform: translateY(100%);
-        background-color: rgb(255 255 255 / 75%);
+        box-shadow: -1rem 2rem 3rem -1rem rgb(102 102 102 / 40%);
+        width: calc(100% - (100% - var(--mobile-width)) / 2);
+        background-color: rgb(255 255 255 / 80%);
+        font-size: clamp(1.6rem, 5vw, 2.2rem);
         backdrop-filter: blur(0.8rem);
-        font-size: clamp(1.6rem, 5vw, 2rem);
+        border-radius: 0 0 0 1.4rem;
+        transform: translateY(100%);
+        padding: 2rem 3rem 2rem 0;
         color: var(--primary-a);
-        font-weight: 600;
-        padding: 2rem 0;
-        max-height: 62vh;
-        overflow: auto;
-        opacity: 0;
+        box-sizing: border-box;
+        position: absolute;
         visibility: hidden;
         overflow-y: scroll;
+        font-weight: 600;
+        max-height: 62vh;
+        bottom: -0.2rem;
+        overflow: auto;
+        opacity: 0;
+        right: 0;
     }
 
     header nav .cta {
+        padding: clamp(0.8rem,3vmin,1.2rem) 1.5rem;
         background-color: var(--highlight);
+        font-size: clamp(1.8rem,1vw,2rem);
         font-weight: 500;
-        padding: clamp(0.8rem, 2vmin, 1.2rem) 1.5rem;
         border-radius: 0.6rem;
-        border: 0.2rem solid var(--primary-c);
         height: min-content;
         color: var(--light);
         position: sticky;
         bottom: 0;
-        font-size: clamp(1.6rem, 1vw, 2rem);
         margin: 6rem 0 2rem;
         text-align: center;
     }
@@ -293,14 +291,12 @@ const services = await getCollection("services");
         flex-direction: column;
         justify-content: right;
         align-items: end;
-        width: var(--mobile-width);
         margin-inline: auto;
         text-align: right;
     }
 
     header nav a {
         padding: 0 0.6rem;
-        height: 4.5rem;
         display: flex;
         align-items: center;
     }
@@ -308,6 +304,20 @@ const services = await getCollection("services");
     header nav > .ctnr > a:not(.cta),
     .subnav > .flex > a:not(.cta) {
         border-radius: 0.3rem;
+        height: 4.3rem;
+    }
+
+    .subsets {
+        padding: 1.5rem 0rem 2.5rem 3rem;
+        font-size: 0.9em;
+        font-weight: 500;
+        display: none;
+        flex-direction: column;
+        gap: clamp(2rem, 2vw, 4rem);
+        margin: 0rem 0 3rem;
+        background-image: linear-gradient(40deg, var(--light), transparent 80%);
+        background-attachment: fixed;
+        border-radius: 0.9rem;
     }
 
     .subsets > div a {
@@ -324,19 +334,6 @@ const services = await getCollection("services");
         position: relative;
         height: 100%;
         justify-content: center;
-    }
-
-    .subsets {
-        padding: 1rem 0rem 1.5rem 3rem;
-        font-size: 0.9em;
-        font-weight: 500;
-        display: none;
-        flex-direction: column;
-        gap: clamp(2rem, 2vw, 4rem);
-        margin: 0rem 0 3rem;
-        background-image: linear-gradient(40deg, var(--light), transparent);
-        background-attachment: fixed;
-        border-radius: 1.2rem 0 0 1.2rem;
     }
 
     .subsets > hr {
@@ -412,23 +409,22 @@ const services = await getCollection("services");
         margin-right: -0.6rem;
     }
 
-    .subnav .expand span.active {
-        transform: translate(0%, 0%) rotate(225deg);
+    .subnav .expand span {
+        display: block;
+        border-bottom: 0.5rem solid var(--highlight);
+        border-right: 0.5rem solid var(--highlight);
+        border-top: 0.5rem solid transparent;
+        border-left: 0.5rem solid transparent;
+        transform: translate(50%, 0%) rotate(135deg);
     }
 
-    .subnav .expand span {
-        width: 0.5rem;
-        height: 0.5rem;
-        display: block;
-        border-bottom: 0.3rem solid var(--primary-a);
-        border-right: 0.3rem solid var(--primary-a);
+    .subnav .expand span.active {
         transform: translate(0%, -50%) rotate(45deg);
     }
 
     .subsets > div hr {
         width: 2rem;
         margin: 1rem;
-        border: unset;
         height: 0.1rem;
         background-color: var(--primary-c);
     }
@@ -461,6 +457,7 @@ const services = await getCollection("services");
             visibility: visible;
             backdrop-filter: unset;
             font-size: 1.8rem;
+            box-shadow: unset;
         }
 
         header nav a {
@@ -488,6 +485,7 @@ const services = await getCollection("services");
             position: static;
             margin: unset;
             margin-left: clamp(0rem, calc(8vw - 9rem), 6rem);
+            border: 0.2rem solid var(--primary-c);
         }
 
         header nav > .ctnr {
@@ -495,7 +493,7 @@ const services = await getCollection("services");
             text-align: unset;
             justify-content: right;
             width: unset;
-            gap: clamp(0rem, calc(8vw - 7rem), 4rem);
+            gap: clamp(0rem,calc(6vw - 6rem),4rem);
             align-items: center;
             height: 100%;
         }
@@ -514,7 +512,7 @@ const services = await getCollection("services");
             bottom: 0;
             margin: 0;
             transform: translate(0%, calc(100% - 2rem));
-            box-shadow: 0 1rem 3rem -1rem var(--light-b);
+            box-shadow: 0 1rem 3rem -1rem rgb(248 248 255 / 40%);
             display: flex;
             transition: opacity 0.3s 0.2s ease, visibility 0.3s 0.2s ease,
                 transform 0.3s 0.2s ease;
