--- a/src/layouts/SubpageLayout.astro
+++ b/src/layouts/SubpageLayout.astro
@@ -1,9 +1,11 @@
 ---
 const { title, description } = Astro.props;
 
-import "../styles/global.css";
-
 import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
+import "../styles/subpages.css";
 ---
 
 <!DOCTYPE html>
@@ -12,7 +14,13 @@ import BaseHead from "../components/BaseHead.astro";
         <BaseHead title={title} description={description} />
     </head>
     <body>
-        <slot />
+        <Header />
+        <main>
+            <div class="ctnr">
+                <slot />
+            </div>
+        </main>
+        <Footer />
         <style is:global>
             :root {
                 --accent: 124, 58, 237;
